terraform-end-user/vpc.tf
resource "aws_vpc" "team02" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "TEAM02-VPC"
  }
}

resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.team02.id
  cidr_block              = var.subnet_cidr
  map_public_ip_on_launch = true

  tags = {
    Name = "TEAM02-PUBLIC-SUBNET"
  }
}

resource "aws_internet_gateway" "team02" {
  vpc_id = aws_vpc.team02.id

  tags = {
    Name = "TEAM02-IGW"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.team02.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.team02.id
  }

  tags = {
    Name = "TEAM02-PUBLIC-RT"
  }
}

resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}
